7902208: Follow-up generification and misc, part 2
Reviewed-by: jjg